--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,99 @@
-body {
+* {
+  padding: none;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+}
+.navbar {
+  height: 30vh;
+  background-color: rgb(117, 24, 24);
+  font-size: 2rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  overflow: visible;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.navbar ul {
+  display: flex;
+  padding-bottom: 30px;
+  font-family: "Raleway", sans-serif;
+}
+
+.navbar h1 {
+  font-size: 3rem;
+  color: white;
+  font-family: "Raleway", sans-serif;
+}
+
+.menu {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+  gap: 40px;
+  margin: 2rem auto;
+  width: 100%;
+}
+
+.menu img {
+  width: 200px;
+  height: 200px;
+  border-radius: 20px;
+}
+
+.menu-item {
+  display: flex;
+  flex-direction: column;
+  width: 450px;
+  height: 450px;
+  justify-content: center;
+  align-items: center;
+  font-family: "Raleway", sans-serif;
+  font-size: 1rem;
+}
+
+.menu-item h1 {
+  padding: 10px;
+}
+.menu-item h2 {
+  padding: 10px;
+}
+
+.menu button {
+  border: none;
+  border-radius: 20px;
+  padding: 10px;
+  background: rgb(117, 24, 24);
+  color: white;
+  font-family: "Raleway", sans-serif;
+}
+
+.reviews {
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+  gap: 40px;
+  margin: 2rem auto;
+  width: 100%;
+  font-family: "Raleway", sans-serif;
+}
+
+.reviews-container button {
+  border: none;
+  border-radius: 20px;
+  padding: 10px;
+  background: rgb(117, 24, 24);
+  color: white;
+  font-family: "Raleway", sans-serif;
+}
+.reviews-container {
+  text-align: center;
+  margin: 2rem auto;
+}
+.reviews-container h1 {
+  font-size: 2rem;
+  font-family: "Raleway", sans-serif;
 }
